--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="home-container">
-  <p><a [routerLink]="['info']">Info</a></p>
-  <p><a [routerLink]="['registration']">Anmeldungen</a></p>
+  <p><a [routerLink]="['/info']">Info</a></p>
+  <p><a [routerLink]="['/registration']">Anmeldungen</a></p>
 </div>
