--- a/client/src/app/+admin/password-change/password-change.component.html
+++ b/client/src/app/+admin/password-change/password-change.component.html
@@ -1,3 +1,36 @@
-<p>
-  password-change works!
-</p>
+<div class="admin-container">
+  <h3>Passwort ändern</h3>
+  <form class="form" [formGroup]="form" novalidate>
+    <section class="section">
+      <md-input-container class="full-width">
+        <input mdInput placeholder="Aktuelles Passwort" formControlName="currentPassword" type="password">
+        <md-hint *ngIf="!form.controls.currentPassword.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich
+        </md-hint>
+      </md-input-container>
+    </section>
+    <section class="section">
+      <md-input-container class="full-width">
+        <input mdInput placeholder="Neues Passwort" formControlName="password" type="password">
+        <md-hint *ngIf="!form.controls.password.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich, mind. 7
+          Zeichen
+        </md-hint>
+      </md-input-container>
+    </section>
+    <section class="section">
+      <md-input-container class="full-width">
+        <input mdInput placeholder="Passwort wiederholen" formControlName="passwordRetype" type="password">
+        <md-hint *ngIf="!form.controls.passwordRetype.valid" [ngStyle]="{'color': 'red'}" align="start">Passwörter nicht
+          identisch
+        </md-hint>
+      </md-input-container>
+    </section>
+    <div class="button-row">
+      <span class="fill-remaining-space"></span>
+      <button md-button (click)="changePassword(form.value, form.valid)" [disabled]="!form.valid" class="grayButton">
+        Passwort ändern
+      </button>
+    </div>
+  </form>
+  <p>{{message}}</p>
+  <app-my-spinner [isRunning]="busy" [delay]="150"></app-my-spinner>
+</div>
