--- a/client/src/app/+admin/password-change/password-change.component.html
+++ b/client/src/app/+admin/password-change/password-change.component.html
@@ -3,14 +3,14 @@
   <form class="form" [formGroup]="form" novalidate>
     <section class="section">
       <md-input-container class="full-width">
-        <input mdInput placeholder="Aktuelles Passwort" formControlName="currentPassword" type="password">
+        <input mdInput placeholder="aktuelles Passwort" formControlName="currentPassword" type="password">
         <md-hint *ngIf="!form.controls.currentPassword.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich
         </md-hint>
       </md-input-container>
     </section>
     <section class="section">
       <md-input-container class="full-width">
-        <input mdInput placeholder="Neues Passwort" formControlName="password" type="password">
+        <input mdInput placeholder="neues Passwort" formControlName="password" type="password">
         <md-hint *ngIf="!form.controls.password.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich, mind. 7
           Zeichen
         </md-hint>
