--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -10,7 +10,7 @@
   </header>
 
   <md-sidenav [mode]="push" #sidenav>
-    <md-toolbar color="primary">Menu
+    <md-toolbar class="toolbar__header">Menu
     </md-toolbar>
     <md-nav-list>
       <a md-list-item [routerLink]="['/home']" (click)="sidenav.close()">
