--- a/client/src/app/+admin/password-change/password-change.component.html
+++ b/client/src/app/+admin/password-change/password-change.component.html
@@ -1,34 +1,35 @@
 <div class="admin-container">
   <h3>Passwort ändern</h3>
-  <form class="form" [formGroup]="form" novalidate>
+  <form class="form" #f="ngForm" novalidate (ngSubmit)="changePassword(f.value, f)">
     <section class="section">
       <md-input-container class="full-width">
-        <input mdInput placeholder="aktuelles Passwort" formControlName="currentPassword" type="password">
-        <md-hint *ngIf="!form.controls.currentPassword.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich
+        <input mdInput placeholder="aktuelles Passwort" name="currentPassword" type="password" required
+               #currentPasswordControl="ngModel" [ngModel]="currentPassword" >
+        <md-hint *ngIf="!currentPasswordControl.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich
         </md-hint>
       </md-input-container>
     </section>
     <section class="section">
       <md-input-container class="full-width">
-        <input mdInput placeholder="neues Passwort" formControlName="password" type="password">
-        <md-hint *ngIf="!form.controls.password.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich, mind. 7
+        <input mdInput placeholder="neues Passwort" name="password" type="password" required minlength="8"
+               #passwordControl="ngModel" [ngModel]="password">
+        <md-hint *ngIf="!passwordControl.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich, mind. 8
           Zeichen
         </md-hint>
       </md-input-container>
     </section>
     <section class="section">
       <md-input-container class="full-width">
-        <input mdInput placeholder="Passwort wiederholen" formControlName="passwordRetype" type="password">
-        <md-hint *ngIf="!form.controls.passwordRetype.valid" [ngStyle]="{'color': 'red'}" align="start">Passwörter nicht
+        <input mdInput placeholder="Passwort wiederholen" name="confirmPassword" type="password" required
+               #confirmPasswordControl="ngModel" [ngModel]="confirmPassword">
+        <md-hint *ngIf="!confirmPasswordControl.valid" [ngStyle]="{'color': 'red'}" align="start">Passwörter sind nicht
           identisch
         </md-hint>
       </md-input-container>
     </section>
     <div class="button-row">
       <span class="fill-remaining-space"></span>
-      <button md-button (click)="changePassword(form.value, form.valid)" [disabled]="!form.valid" class="grayButton">
-        Passwort ändern
-      </button>
+      <button md-button type="submit" [disabled]="!f.valid" class="grayButton">Passwort ändern</button>
     </div>
   </form>
   <p>{{message}}</p>
