add EqualsValidator, add ng2-validators for passwort checks

--- a/client/src/app/+admin/password-change/password-change.component.html
+++ b/client/src/app/+admin/password-change/password-change.component.html
@@ -4,24 +4,25 @@
     <section class="section">
       <md-input-container class="full-width">
         <input mdInput placeholder="aktuelles Passwort" name="currentPassword" type="password" required
-               #currentPasswordControl="ngModel" [ngModel]="currentPassword" >
+               #currentPasswordControl="ngModel" [ngModel]="currentPassword">
         <md-hint *ngIf="!currentPasswordControl.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich
         </md-hint>
       </md-input-container>
     </section>
     <section class="section">
       <md-input-container class="full-width">
-        <input mdInput placeholder="neues Passwort" name="password" type="password" required minlength="8"
-               #passwordControl="ngModel" [ngModel]="password">
-        <md-hint *ngIf="!passwordControl.valid" [ngStyle]="{'color': 'red'}" align="start">erforderlich, mind. 8
+        <input mdInput placeholder="neues Passwort" name="password" type="password" #passwordControl="ngModel"
+               [ngModel]="password" required validateEqual=confirmPassword reverse="true" minlength="8"
+               password [digitCharacter]="1" [lowercaseCharacter]="1" [uppercaseCharacter]="1">
+        <md-hint *ngIf="!passwordControl.valid" [ngStyle]="{'color': 'red'}" align="start">Klein & Gross & Zahl, mind. 8 Zeichen
           Zeichen
         </md-hint>
       </md-input-container>
     </section>
     <section class="section">
       <md-input-container class="full-width">
-        <input mdInput placeholder="Passwort wiederholen" name="confirmPassword" type="password" required
-               #confirmPasswordControl="ngModel" [ngModel]="confirmPassword">
+        <input mdInput placeholder="Passwort wiederholen" name="confirmPassword" type="password"
+               #confirmPasswordControl="ngModel" [ngModel]="confirmPassword" required validateEqual=password>
         <md-hint *ngIf="!confirmPasswordControl.valid" [ngStyle]="{'color': 'red'}" align="start">Passwörter sind nicht
           identisch
         </md-hint>
