--- a/client/src/app/+admin/dashboard/dashboard.component.html
+++ b/client/src/app/+admin/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div color="primary" class="admin-container">
-  <button md-button class="button" [routerLink]="[{ outlets: { admin: ['users'] } }]">Users</button>
-  <button md-button class="button" [routerLink]="[{ outlets: { admin: ['groups'] } }]">Groups</button>
+  <button md-button class="button" [routerLink]="[{ outlets: { admin: ['users'] } }]">Benutzer</button>
+  <button md-button class="button" [routerLink]="[{ outlets: { admin: ['groups'] } }]">Gruppen</button>
   <button md-button class="button" [routerLink]="[{ outlets: { admin: ['registrations'] } }]">Anmeldungen</button>
   <button md-button class="button" [routerLink]="[{ outlets: { admin: ['change-password'] } }]">Password ändern</button>
   <button md-button class="button" [routerLink]="['/admin/logout']">Logout</button>
