--- a/client/src/app/+admin/dashboard/dashboard.component.html
+++ b/client/src/app/+admin/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
   <button md-button class="button" [routerLink]="[{ outlets: { admin: ['users'] } }]">Benutzer</button>
   <button md-button class="button" [routerLink]="[{ outlets: { admin: ['groups'] } }]">Gruppen</button>
   <button md-button class="button" [routerLink]="[{ outlets: { admin: ['registrations'] } }]">Anmeldungen</button>
+  <span class="example-spacer"></span>
   <button md-button class="button" [routerLink]="[{ outlets: { admin: ['change-password'] } }]">Password ändern</button>
   <button md-button class="button" [routerLink]="['/admin/logout']">Logout</button>
 </div>
