hide Admin Menu Entries Users and Groups if not Admin

--- a/client/src/app/+admin/dashboard/dashboard.component.html
+++ b/client/src/app/+admin/dashboard/dashboard.component.html
@@ -1,6 +1,10 @@
 <div color="primary" class="admin-container">
-  <button md-button class="button" [routerLink]="[{ outlets: { admin: ['users'] } }]">Benutzer</button>
-  <button md-button class="button" [routerLink]="[{ outlets: { admin: ['groups'] } }]">Gruppen</button>
+  <button md-button *ngIf="authenticationService.isAdmin()"
+          class="button" [routerLink]="[{ outlets: { admin: ['users'] } }]">Benutzer
+  </button>
+  <button md-button *ngIf="authenticationService.isAdmin()" class="button"
+          [routerLink]="[{ outlets: { admin: ['groups'] } }]">Gruppen
+  </button>
   <button md-button class="button" [routerLink]="[{ outlets: { admin: ['registrations'] } }]">Anmeldungen</button>
   <span class="example-spacer"></span>
   <button md-button class="button" [routerLink]="[{ outlets: { admin: ['change-password'] } }]">Password ändern</button>
