--- a/client/src/app/+admin/registration-admin/registration-admin.component.scss
+++ b/client/src/app/+admin/registration-admin/registration-admin.component.scss
@@ -27,7 +27,7 @@
   align-items: baseline;
 }
 
-@media (max-width: 600px)  {
+@media screen and (max-width: 600px)  {
   .size-xl {
     display: none;
   }
