--- a/client/src/app/+admin/registration-admin/registration-admin.component.scss
+++ b/client/src/app/+admin/registration-admin/registration-admin.component.scss
@@ -3,6 +3,35 @@
   margin: 0.5em;
 }
 
+.div__header {
+  display: flex;
+  align-items: center;
+  background: #9fdee0;
+  padding: 0.5em;
+}
+
+.icon--rightpad {
+  padding-right: 0.5em;
+}
+
+.h3__small-margins {
+  margin: 0;
+}
+
+.fill-remaining-space {
+  flex: 1 1 auto;
+}
+
+.details-container {
+  margin: 0.5em;
+  font-family: Roboto,"Helvetica Neue",sans-serif;
+}
+
+.p__small-margin{
+  margin-top: 0.4em;
+  margin-bottom: 0.4em;
+}
+
 .grayButton {
   background: #A6BAC5;
   min-width: 10px;
@@ -27,7 +56,7 @@
   align-items: baseline;
 }
 
-@media screen and (max-width: 600px)  {
+@media screen and (max-width: 600px) {
   .size-xl {
     display: none;
   }
