--- a/client/src/app/registration/registration.component.html
+++ b/client/src/app/registration/registration.component.html
@@ -59,8 +59,8 @@
   </section>
   <section class="section">
     <md-input-container class="full-width">
-      <input mdInput placeholder="Email" formControlName="email">
-      <md-hint *ngIf="!form.controls.email.valid" [ngStyle]="{'color': 'red'}" align="start">gültige Emailadresse
+      <input mdInput placeholder="E-Mail" formControlName="email">
+      <md-hint *ngIf="!form.controls.email.valid" [ngStyle]="{'color': 'red'}" align="start">gültige E-Mail Adresse
         erforderlich
       </md-hint>
     </md-input-container>
