--- a/client/src/app/+admin/registration-admin/registration-admin.component.html
+++ b/client/src/app/+admin/registration-admin/registration-admin.component.html
@@ -4,7 +4,7 @@
     <span class="fill-remaining-space"></span>
     <a href="/export.pdf">Export</a>
   </div>
-  <div class="registration-container">
+  <div class="group-container">
     <!--  <div class="table">
         <md-select placeholder="Gruppenfilter" name="filter" class="topborder"
                    (ngModelChange)="resetSubgroup($event)">
