--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -13,3 +13,15 @@ button.mat-button {
 h2 {
   font-size: 100%;
 }
+
+.div--margins {
+  margin: 0.5em;
+}
+
+.div--maxwith {
+  max-width: 700px;
+}
+
+.div--maxwith500 {
+  max-width: 500px;
+}
