--- a/client/src/app/+admin/user-admin/user-admin.component.scss
+++ b/client/src/app/+admin/user-admin/user-admin.component.scss
@@ -1,7 +1,3 @@
-.group-container {
-  max-width: 700px;
-  margin: 0.5em;
-}
 
 .div__header {
   display: flex;
@@ -22,12 +18,11 @@
   flex: 1 1 auto;
 }
 
-.user-container {
-  margin: 0.5em;
-  font-family: Roboto,"Helvetica Neue",sans-serif;
+.div--font {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.p__small-margin{
+.p__small-margin {
   margin-top: 0.4em;
   margin-bottom: 0.4em;
 }
@@ -63,7 +58,6 @@
   align-items: baseline;
 }
 
-
 .section {
   display: flex;
   flex-wrap: wrap;
@@ -71,7 +65,6 @@
   align-items: baseline;
   min-height: 3em;
 }
-
 
 .full-width {
   width: 100%;
@@ -105,12 +98,9 @@
   display: none;
 }
 
-
 .fill-remaining-space {
   flex: 1 1 auto;
 }
-
-
 
 @media screen and (max-width: 600px) {
   .size-xl {
