--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -25,3 +25,19 @@ h2 {
 .div--maxwith500 {
   max-width: 500px;
 }
+
+.div--font {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.div--grow {
+  flex-grow: 1;
+}
+
+.fill-remaining-space {
+  flex: 1 1 auto;
+}
+
+
+
+
